--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsManageOwnPublicEventsMenuItem.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsManageOwnPublicEventsMenuItem.cshtml
@@ -24,7 +24,7 @@
           </div>
         </div>
         <div class="event-block-expand" style="display:none;">
-          @Html.Partial("_LobbyEventBlock")
+          @Html.Partial("_EventBlock", new ViewDataDictionary { { "page", "details" } })
         </div>
       </div>
     </div>
@@ -54,7 +54,7 @@
           </div>
         </div>
         <div class="event-block-expand" style="display:none;">
-          @Html.Partial("_LobbyEventBlock")
+          @Html.Partial("_EventBlock", new ViewDataDictionary { { "page", "details" } })
         </div>
       </div>
     </div>
