--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventsMenuItems.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventsMenuItems.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="events-menu-container">
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 7, $root.lobbyPagePublicEventListMenu.getCurrentSelectedEventsProp(), $root.lobbyPagePublicEventListMenu ) }">
+	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 7, $root.lobbyPage.upcomingEventsPart.eventListMenuVM.getCurrentSelectedEventsProp(), $root.eventListMenuVM ) }">
 		<div class="border-item inne-border-tab"></div>
 		<div class="menu-item" data-eventkind="7">
 			<span>Inne</span>
@@ -9,7 +9,7 @@
 		</div>
 	</div>
 
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 2, $root.lobbyPagePublicEventListMenu.getCurrentSelectedEventsProp(), $root.lobbyPagePublicEventListMenu ) }">
+	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 2, $root.lobbyPage.upcomingEventsPart.eventListMenuVM.getCurrentSelectedEventsProp(), $root.eventListMenuVM ) }">
 		<div class="border-item lekcje-border-tab"></div>
 		<div class="menu-item" data-eventkind="2">
 			<span>Lekcje</span>
@@ -21,7 +21,7 @@
 	</div>
 
 
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 1, $root.lobbyPagePublicEventListMenu.getCurrentSelectedEventsProp(), $root.lobbyPagePublicEventListMenu ) }">
+	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 1, $root.lobbyPage.upcomingEventsPart.eventListMenuVM.getCurrentSelectedEventsProp(), $root.eventListMenuVM ) }">
 		<div class="border-item wydarzenia-border-tab"></div>
 		<div class="menu-item" data-eventkind="1">
 			<span>Wydarzenia</span>
@@ -31,7 +31,7 @@
 		</div>
 	</div>
 
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 6, $root.lobbyPagePublicEventListMenu.getCurrentSelectedEventsProp(), $root.lobbyPagePublicEventListMenu ) }">
+	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 6, $root.lobbyPage.upcomingEventsPart.eventListMenuVM.getCurrentSelectedEventsProp(), $root.eventListMenuVM ) }">
 		<div class="border-item spotkania-border-tab"></div>
 		<div class="menu-item" data-eventkind="6">
 			<span>Spotkania</span>
@@ -42,7 +42,7 @@
 		</div>
 	</div>
 
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 3, $root.lobbyPagePublicEventListMenu.getCurrentSelectedEventsProp(), $root.lobbyPagePublicEventListMenu ) }">
+	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 3, $root.lobbyPage.upcomingEventsPart.eventListMenuVM.getCurrentSelectedEventsProp(), $root.eventListMenuVM ) }">
 		<div class="border-item zajecia-border-tab"></div>
 		<div class="menu-item" data-eventkind="3">
 			<span>Zajęcia</span>
@@ -52,7 +52,7 @@
 		</div>
 	</div>
 
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 4, $root.lobbyPagePublicEventListMenu.getCurrentSelectedEventsProp(), $root.lobbyPagePublicEventListMenu ) }">
+	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 4, $root.lobbyPage.upcomingEventsPart.eventListMenuVM.getCurrentSelectedEventsProp(), $root.eventListMenuVM ) }">
 		<div class="border-item szkolenia-border-tab"></div>
 		<div class="menu-item" data-eventkind="4">
 			<span>Szkolenia</span>
@@ -63,7 +63,7 @@
 		</div>
 	</div>
 
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 5, $root.lobbyPagePublicEventListMenu.getCurrentSelectedEventsProp(), $root.lobbyPagePublicEventListMenu ) }">
+	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 5, $root.lobbyPage.upcomingEventsPart.eventListMenuVM.getCurrentSelectedEventsProp(), $root.eventListMenuVM ) }">
 		<div class="border-item kursy-border-tab"></div>
 		<div class="menu-item" data-eventkind="5">
 			<span>Kursy</span>
