--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_UpcomingEventsPart.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_UpcomingEventsPart.cshtml
@@ -2,14 +2,13 @@
 	<div class="lobby-menu-container">
 		<input type="button" value="Stwórz publiczne wydarzenie" id="addPublicEventBtn" class="btn-add hover-cursor-pointer" data-bind="click: function ( data, e ) { $root.showAddPublicEventPopupOnClick( $element, data, e ) }" />
 	</div>
-	@Html.Partial( "_LobbyEventsMenuItems" )
+	@Html.Partial( "_UpcomingEventsPart.EventCountTiles" )
 
 	<div id="lobbyDisplayEventsOverviewContainer" class="display-events-overview-container" data-bind="visible: $root.lobbyPage.upcomingEventsPart.eventListMenuVM.isOpen()">
 		<header class="display-events-overview-header">
 			<span class="display-events-header-menu-title selected hover-cursor-pointer">Publiczne wydarzenia</span>
 			<span class="btn-close hover-cursor-pointer" data-bind="click: $root.closeAllSelectedEventsListContainerOnClick">x</span>
 		</header>
-		@Html.Partial( "_LobbyPublicEventList" )
+		@Html.Partial( "_UpcomingEventsPart.EventListMenu" )
 	</div>
-
 </section>
