--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_EventGridPart.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_EventGridPart.cshtml
@@ -1,5 +1,5 @@
 ﻿<section id="lobbyEventsMasonryContainer">
-	<div class="grid js-masonry" data-bind="masonry: { data: publicEvents, masonryOptions: { itemClass: 'event-block-container', gutter: 10 } }">
+	<div class="grid js-masonry" data-bind="masonry: { data: lobbyPage.eventGridPart.publicEventsVM, masonryOptions: { itemClass: 'event-block-container', gutter: 10 } }">
 		<div class="event-block-container" data-bind="attr: { 'data-eventid': id }">
 			@Html.Partial( "_EventBlock", new ViewDataDictionary { { "page", "lobby" } } )
 		</div>
